    debian/idle.menu (Closes: #482156)
  * Update Python policy
    - Describe addition of /usr/bin/python2 due to upstream changes
    - Remove redundant text on Python provides and clarify when they should be
      used
    - Update description of functionality related to X-Python-Version for
      Wheezy
    - Update X/XS-Python-Versions to also include X-Python-Version examples

 -- Scott Kitterman <scott@kitterman.com>  Wed, 16 May 2012 14:19:29 -0400

python-defaults (2.7.2-10) unstable; urgency=low

  [ Matthias Klose ]
  * dh_python2: For argparse eggs, generate dependencies of the form
    "python (>= 2.7) | python-argparse". Closes: #653644, #657119.
  * Regenerate pydist/dist_fallback.

  [ Piotr Ożarowski ]
  * pycompile: fix -O option
  * dh_python2: do not try to add python2.X dependency if private dir works
    with all Python versions

 -- Matthias Klose <doko@debian.org>  Tue, 24 Jan 2012 11:49:24 +0100

python-defaults (2.7.2-9) unstable; urgency=low

  * Generate correct dependencies if private directory supports one Python
    version only (closes: #644573)

 -- Piotr Ożarowski <piotr@debian.org>  Sat, 08 Oct 2011 17:16:46 +0200

python-defaults (2.7.2-8) unstable; urgency=high

  * Fix update-manager Breaks (Closes: #644491)

 -- Scott Kitterman <scott@kitterman.com>  Thu, 06 Oct 2011 15:48:06 -0500

python-defaults (2.7.2-7) unstable; urgency=low

  * Adjust version numbers for upload to unstable.
  * python: Break update-manager (<= 0.200.5-1).

 -- Matthias Klose <doko@debian.org>  Tue, 27 Sep 2011 18:21:42 +0200

python-defaults (2.7.2-6) experimental; urgency=low

  [ Scott Kitterman ]
  * Fixed typo in python-policy (thanks to Jakub Wilk)

  [ Piotr Ożarowski ]
  * dh_python2:
    - handle private dir paths without leading slash
    - add python to Depends if unversioned python shebang is detected in
      private directory
    - dist_fallback: add /usr/share/python-support/package/ to paths searched